--- a/_includes/map.html
+++ b/_includes/map.html
@@ -50,8 +50,8 @@ function setMap() {
 function loadData() {
 
   queue()   // queue function loads all external data files asynchronously
-    .defer(d3.json, "{{ site.baseurl }}/js/world-topo.json")  // our geometries
-    .defer(d3.csv, "{{ site.baseurl }}/data/countriesServed.csv")  // and associated data in csv file
+    .defer(d3.json, "/js/world-topo.json")  // our geometries
+    .defer(d3.csv, "/data/countriesServed.csv")  // and associated data in csv file
     .await(processData);   // once all files are loaded, call the processData function passing
                            // the loaded objects as arguments
 }
