--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,8 @@
   <script src="js/queue.v1.min.js"></script>
   <script src="js/topojson.v1.min.js"></script>
 
+  <!--
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic&subset=latin,greek-ext' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700' rel='stylesheet' type='text/css'>
+    -->
 </head>
