--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,32 +19,27 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Clinic Leadership</a></li> <!-- Create static page! -->
-                <li><a href="#">Faculty Advisory Board</a></li> <!-- Create static page! -->
-                <li><a href="#">Volunteer Evaluators</a></li> <!-- Create static page! -->
-                <li><a href="#">The Community</a></li> <!-- Create static page! -->
+                <li><a href="#">Clinic Leadership</a></li>
+                <li><a href="#">Faculty Advisory Board</a></li>
+                <li><a href="#">Volunteer Evaluators</a></li>
+                <li><a href="#">The Community</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Medical students</a></li> <!-- Create static page! -->
-                <li><a href="#">Clinicians</a></li> <!-- Create static page! -->
-                <li><a href="#">Lawyers and Law Firms</a></li> <!-- Create static page! -->
-                <li><a href="#">Law students</a></li> <!-- Create static page! -->
-                <li><a href="#">NGOs and Not-for-profits</a></li> <!-- Create static page! -->
+                <li><a href="#">Medical students</a></li>
+                <li><a href="#">Clinicians</a></li>
+                <li><a href="#">Lawyers and Law Firms</a></li>
+                <li><a href="#">Law students</a></li>
+                <li><a href="#">NGOs and Not-for-profits</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li class="divider"></li>
                 <li class="dropdown-header">Local</li>
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">National</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">International</li>
               </ul>
