--- a/css/wnyhrc-map.css
+++ b/css/wnyhrc-map.css
@@ -1,14 +1,34 @@
+.svg-content-responsive {
+        display: inline-block;
+        position: fixed;
+        top: 10px;
+        left: 0;
+        width: 100%;
+        z-index: 2;
+    }
+
+
+.content{
+      position: relative;
+      padding-top: 33%;
+      z-index: 3;
+}
+
+.footer {
+  z-index 3;
+  position: relative;
+  width: 100%;
+}
+
+
 .navbar-brand {
+          font-family: 'Open Sans Condensed', sans-serif;
           color: black !important;
-          font-size: 24px;
+          font-size: 18px;
           font-weight: 700;
       }
-      .navbar{
-            font-family: 'Open Sans Condensed', sans-serif;
-      }
 
-
-      .stroke {
+  .stroke {
         fill: none;
         stroke: #888;
         stroke-width: 2px;
@@ -38,17 +58,4 @@
           fill: steelblue;
           stroke: white;
       }
-      .svg-container {
-        display: inline-block;
-        position: relative;
-        width: 100%;
-        vertical-align: top;
-        overflow: hidden;
-        }
-     .svg-content-responsive {
-        display: inline-block;
-        position: relative;
-        top: 10px;
-        left: 0;
-        width: 100%;
-        }
+
