Be borne, files

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,13 @@
 ---
 layout: default
 ---
+
+
+<div class="content">
+    <div class="col-md-12">
+
+    <div class="jumbotron">
+
 <div class="post">
 
   <header class="post-header">
@@ -10,5 +17,24 @@ layout: default
   <article class="post-content">
     {{ content }}
   </article>
+
+</div>
+
+
+    <br>
+</div>
+
+
+    <!-- Footer content living here temporarily because soy noob" -->
+      <div class="jumbotron">
+        <div class="row">
+            <div class="col-sm-4"><h4><small><a href="/who-we-are/">WHO WE ARE</a></small></h4></div>
+            <div class="col-sm-4"><h4><small><a href="#">GET INVOLVED</a></small></h4></div>
+            <div class="col-sm-4"><h4><small><a href="#">RESOURCES</a></small></h4></div>
+        </div>
+      </div>
+
+    </div>
+    </div>
 
 </div>
