--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,14 +6,14 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/wnyhrc-map.css">
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/d3.v3.min.js"></script>
-  <script src="js/d3.geo.projection.v0.min.js"></script>
-  <script src="js/queue.v1.min.js"></script>
-  <script src="js/topojson.v1.min.js"></script>
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/wnyhrc-map.css">
+  <script src="{{ site.baseurl }}/js/jquery.min.js"></script>
+  <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+  <script src="{{ site.baseurl }}/js/d3.v3.min.js"></script>
+  <script src="{{ site.baseurl }}/js/d3.geo.projection.v0.min.js"></script>
+  <script src="{{ site.baseurl }}/js/queue.v1.min.js"></script>
+  <script src="{{ site.baseurl }}/js/topojson.v1.min.js"></script>
 
   <!--
   <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic&subset=latin,greek-ext' rel='stylesheet' type='text/css'>
