--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,17 +12,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">WNY Human Rights Clinic</a>
+            <a class="navbar-brand" href="/{{ site.baseurl }}">WNY Human Rights Clinic</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are <span class="caret"></span></a>
+              <a href="/who-we-are/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Clinic Leadership</a></li>
-                <li><a href="#">Faculty Advisory Board</a></li>
-                <li><a href="#">Volunteer Evaluators</a></li>
-                <li><a href="#">The Community</a></li>
+                  <li><a href="/leadership/">Clinic Leadership</a></li>
+                  <li><a href="/faculty-advisory-board">Faculty Advisory Board</a></li>
+                  <li><a href="/evaluators">Volunteer Evaluators</a></li>
+                  <li><a href="/community">The Community</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
