--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,10 +19,10 @@
             <li class="dropdown">
               <a href="/who-we-are/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                  <li><a href="/leadership/">Clinic Leadership</a></li>
-                  <li><a href="/faculty-advisory-board">Faculty Advisory Board</a></li>
-                  <li><a href="/evaluators">Volunteer Evaluators</a></li>
-                  <li><a href="/community">The Community</a></li>
+                  <li><a href="{{ site.baseurl}}/leadership/">Clinic Leadership</a></li>
+                  <li><a href="{{ site.baseurl}}/faculty-advisory-board">Faculty Advisory Board</a></li>
+                  <li><a href="{{ site.baseurl}}/evaluators">Volunteer Evaluators</a></li>
+                  <li><a href="{{ site.baseurl}}/community">The Community</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
