--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,7 +28,7 @@ layout: default
     <!-- Footer content living here temporarily because soy noob" -->
       <div class="jumbotron">
         <div class="row">
-            <div class="col-sm-4"><h4><small><a href="/who-we-are/">WHO WE ARE</a></small></h4></div>
+            <div class="col-sm-4"><h4><small><a href="{{ site.baseurl}}/who-we-are/">WHO WE ARE</a></small></h4></div>
             <div class="col-sm-4"><h4><small><a href="#">GET INVOLVED</a></small></h4></div>
             <div class="col-sm-4"><h4><small><a href="#">RESOURCES</a></small></h4></div>
         </div>
