--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@ Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac tu
     <!-- Footer content living here temporarily because soy noob" -->
       <div class="jumbotron">
         <div class="row">
-            <div class="col-sm-4"><h4><small><a href="#">WHO WE ARE</a></small></h4></div>
+            <div class="col-sm-4"><h4><small><a href="{{ site.baseurl}}/who-we-are">WHO WE ARE</a></small></h4></div>
             <div class="col-sm-4"><h4><small><a href="#">GET INVOLVED</a></small></h4></div>
             <div class="col-sm-4"><h4><small><a href="#">RESOURCES</a></small></h4></div>
         </div>
