--- a/css/wnyhrc-map.css
+++ b/css/wnyhrc-map.css
@@ -10,11 +10,11 @@
 
 .content{
       position: relative;
-      padding-top: 33%;
+      padding-top: 38%;
       z-index: 3;
 }
 
-.footer {
+footer {
   z-index: 3;
   width: 100%;
 }
