--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,6 @@
 <header class="site-header">
 
   <div class="wrapper">
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -22,30 +20,36 @@
                   <li><a href="{{site.baseurl}}/leadership/">Clinic Leadership</a></li>
                   <li><a href="{{site.baseurl}}/faculty-advisory-board">Faculty Advisory Board</a></li>
                   <li><a href="{{site.baseurl}}/evaluators">Volunteer Evaluators</a></li>
-                  <li><a href="{{site.baseurl}}/community">The Community</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#"><strong>Donate!</strong></a></li>
-                <li><a href="#">Medical students</a></li>
-                <li><a href="#">Clinicians</a></li>
-                <li><a href="#">Lawyers and Law Firms</a></li>
-                <li><a href="#">Law students</a></li>
-                <li><a href="#">NGOs and Not-for-profits</a></li>
+                  <li><a href="{{ site.baseurl }}/donate"><strong>Donate!</strong></a></li>
+                <li><a href="{{ site.baseurl }}/medical-student">Medical students</a></li>
+                <li><a href="{{ site.baseurl }}/clinicians">Clinicians</a></li>
+                <li><a href="{{ site.baseurl }}/lawyers">Lawyers and Law Firms</a></li>
+                <li><a href="{{ site.baseurl }}/law-students">Law students</a></li>
+                <li><a href="{{ site.baseurl }}/non-profits">NGOs and Not-for-profits</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li class="divider"></li>
-                <li class="dropdown-header">Local</li>
+                <li class="dropdown-header">Local / State</li>
+                <li><a href="http://www.jfsbuffalo.org/#!wny-refugee-survivors-center-/ctnu">WNY Center for Survivors of Torture</a></li>
+                <li><a href="http://www.jrm-buffalo.org/">Jericho Road Community Health Center</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">National</li>
+                <li><a href="http://www.uscis.gov/humanitarian/refugees-asylum/asylum">US Citizenship and Immigration Services: Asylum</a></li>
+                <li><a href="http://www.rcusa.org/asylum-and-detention">Refugee Council USA: Asylum and detention</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">International</li>
+                  <li><a href="#"><strong>WNYHRC Blog</strong></a></li>
+                  <li><a href="http://physiciansforhumanrights.org/">Physicians For Human Rights (PHR)</a></li>
+                  <li><a href="http://www.ohchr.org/en/hrbodies/hrc/pages/hrcindex.aspx">United Nations Human Rights Council (OHCHR)</a></li>
               </ul>
             </li>
-            <li><a href="#"><strong>Request an Evaluation</strong></a></li>
+            <li><a href="{{ site.baseurl }}/evaluation"><strong>Request an Evaluation</strong></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
