--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,7 @@
             <li class="dropdown">
               <a href="/who-we-are/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
+                  <li><a href="{{site.baseurl}}/about/">About the WNYHRC</a></li>
                   <li><a href="{{site.baseurl}}/leadership/">Clinic Leadership</a></li>
                   <li><a href="{{site.baseurl}}/faculty-advisory-board">Faculty Advisory Board</a></li>
                   <li><a href="{{site.baseurl}}/evaluators">Volunteer Evaluators</a></li>
@@ -44,7 +45,7 @@
                 <li><a href="http://www.rcusa.org/asylum-and-detention">Refugee Council USA: Asylum and detention</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">International</li>
-                  <li><a href="#"><strong>WNYHRC Blog</strong></a></li>
+                  <!-- Not ready yet! <li><a href="#"><strong>WNYHRC Blog</strong></a></li> --></a>
                   <li><a href="http://physiciansforhumanrights.org/">Physicians For Human Rights (PHR)</a></li>
                   <li><a href="http://www.ohchr.org/en/hrbodies/hrc/pages/hrcindex.aspx">United Nations Human Rights Council (OHCHR)</a></li>
               </ul>
