--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                  <li><a href="{{ site.baseurl }}/donate"><strong>Donate!</strong></a></li>
+                <!-- Not ready yet! <li><a href="{{ site.baseurl }}/donate"><strong>Donate!</strong></a></li> -->
                 <li><a href="{{ site.baseurl }}/medical-student">Medical students</a></li>
                 <li><a href="{{ site.baseurl }}/clinicians">Clinicians</a></li>
                 <li><a href="{{ site.baseurl }}/lawyers">Lawyers and Law Firms</a></li>
