--- a/css/override.css
+++ b/css/override.css
@@ -11,7 +11,6 @@
         font-weight: 400;
 }
 
-
 .content{
       position: relative;
       padding-top: 36%;
@@ -20,5 +19,11 @@
       font-family: 'Merriweather', sans-serif;
       font-size: 14px;
       font-weight: 400;
+}
 
+#splash {
+      font-family: 'Merriweather', sans-serif;
+      font-size: 24px;
+      line-height: 48px;
+      font-weight: 400;
 }
