--- a/css/override.css
+++ b/css/override.css
@@ -23,7 +23,8 @@
 
 #splash {
       font-family: 'Merriweather', sans-serif;
-      font-size: 24px;
-      line-height: 48px;
-      font-weight: 400;
+      font-size: 28px !important;
+      line-height: 54px !important;
+      font-weight: 300;
+      text-align: left;
 }
