add logo to front page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" href="/{{ site.baseurl }}">WNY Human Rights Clinic</a>
+             <a class="pull-left" href="#"><img style="max-width:40px;" src="{{site.baseurl}}/img/logo/wnyhrc-logo-transparent.png"></a>
+             <a class="navbar-brand" href="/{{ site.baseurl }}">&nbsp;&nbsp; WNY Human Rights Clinic</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav pull-right">
@@ -50,7 +51,7 @@
                   <li><a href="http://www.ohchr.org/en/hrbodies/hrc/pages/hrcindex.aspx">United Nations Human Rights Council (OHCHR)</a></li>
               </ul>
             </li>
-            <li><a href="{{ site.baseurl }}/evaluation"><strong>Request an Evaluation</strong></a></li>
+            <li><a style="margin-top:10px" href="{{ site.baseurl }}/evaluation"><strong>Request an Evaluation</strong></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
