--- a/css/override.css
+++ b/css/override.css
@@ -1,14 +1,19 @@
 .navbar-brand {
           font-family: 'Open Sans', sans-serif;
           color: black !important;
-          font-size: 18px;
+          font-size: 20px;
           font-weight: 700;
+          margin-top: 10px;
 }
 
 .navbar {
         font-family: 'Open Sans', sans-serif;
         font-size: 14px;
         font-weight: 400;
+}
+
+.dropdown {
+      margin-top: 10px;
 }
 
 .content{
