adding some content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,19 +19,19 @@
               <a href="/who-we-are/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Who we are <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                   <li><a href="{{site.baseurl}}/about/">About the WNYHRC</a></li>
-                  <li><a href="{{site.baseurl}}/leadership/">Clinic Leadership</a></li>
                   <li><a href="{{site.baseurl}}/faculty-advisory-board">Faculty Advisory Board</a></li>
+                  <li><a href="{{site.baseurl}}/leadership/">Clinic Leadership</a></li>
                   <li><a href="{{site.baseurl}}/evaluators">Volunteer Evaluators</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <!-- Not ready yet! <li><a href="{{ site.baseurl }}/donate"><strong>Donate!</strong></a></li> -->
-                <li><a href="{{ site.baseurl }}/medical-student">Medical students</a></li>
                 <li><a href="{{ site.baseurl }}/clinicians">Clinicians</a></li>
-                <li><a href="{{ site.baseurl }}/lawyers">Lawyers and Law Firms</a></li>
-                <li><a href="{{ site.baseurl }}/law-students">Law students</a></li>
-                <li><a href="{{ site.baseurl }}/non-profits">NGOs and Not-for-profits</a></li>
+                <li><a href="{{ site.baseurl }}/medical-student">Medical students</a></li>
+                <!-- <li><a href="{{ site.baseurl }}/lawyers">Lawyers and Law Firms</a></li> --></a>
+                <!-- <li><a href="{{ site.baseurl }}/law-students">Law students</a></li> -->
+                <!-- <li><a href="{{ site.baseurl }}/non-profits">NGOs and Not-for-profits</a></li> -->
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Resources <span class="caret"></span></a>
