--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
 <div class="content">
-    <div class="col-md-12">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
         <div class="jumbotron">
 
             <div class="post">
@@ -19,6 +20,6 @@ layout: default
             </div>
 
         </div>
-
     </div>
+    <div class="col-md-1"></div>
 </div>
