--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                   <li><a href="{{site.baseurl}}/about/">About the WNYHRC</a></li>
                   <li><a href="{{site.baseurl}}/faculty-advisory-board">Faculty Advisory Board</a></li>
                   <li><a href="{{site.baseurl}}/leadership/">Clinic Leadership</a></li>
-                  <li><a href="{{site.baseurl}}/evaluators">Volunteer Evaluators</a></li>
+                  <li><a href="{{site.baseurl}}/evaluators">Volunteers</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
