--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,6 +36,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
+                <li class="dropdown-header">For Volunteers</li>
+                <li><a href="{{ site.baseurl }}/assets/pdf/WNYHRCTrainingManual-v1.pdf">WNYHRC Training Manual</a></li>
+                <li><a href="http://www.ohchr.org/Documents/Publications/training8Rev1en.pdf">The Istanbul Protocol</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Local / State</li>
                 <li><a href="http://www.jfsbuffalo.org/#!wny-refugee-survivors-center-/ctnu">WNY Center for Survivors of Torture</a></li>
@@ -43,12 +46,14 @@
                 <li class="divider"></li>
                 <li class="dropdown-header">National</li>
                 <li><a href="http://www.uscis.gov/humanitarian/refugees-asylum/asylum">US Citizenship and Immigration Services: Asylum</a></li>
-                <li><a href="http://www.rcusa.org/asylum-and-detention">Refugee Council USA: Asylum and detention</a></li>
+                <li><a href="http://www.rcusa.org/asylum-and-detention">Refugee Council USA: Asylum and Detention</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">International</li>
                   <!-- Not ready yet! <li><a href="#"><strong>WNYHRC Blog</strong></a></li> --></a>
-                  <li><a href="http://physiciansforhumanrights.org/">Physicians For Human Rights (PHR)</a></li>
-                  <li><a href="http://www.ohchr.org/en/hrbodies/hrc/pages/hrcindex.aspx">United Nations Human Rights Council (OHCHR)</a></li>
+                  <li><a href="http://healtorture.org/">HealTorture.org</a></li>  
+                  <li><a href="http://physiciansforhumanrights.org/">Physicians For Human Rights</a></li>
+                  <li><a href="http://www.ohchr.org/en/hrbodies/hrc/pages/hrcindex.aspx">United Nations Human Rights Council</a></li>
+                  <li><a href="h​ttp://www.unhcr.org">United Nations High Commission on Refugees</a></li>
               </ul>
             </li>
             <li><a style="margin-top:10px" href="{{ site.baseurl }}/evaluation"><strong>Request an Evaluation</strong></a></li>
