add medical student copy

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
               <ul class="dropdown-menu" role="menu">
                 <!-- Not ready yet! <li><a href="{{ site.baseurl }}/donate"><strong>Donate!</strong></a></li> -->
                 <li><a href="{{ site.baseurl }}/clinicians">Clinicians</a></li>
-                <li><a href="{{ site.baseurl }}/medical-student">Medical students</a></li>
+                <li><a href="{{ site.baseurl }}/medical-students">Medical students</a></li>
                 <!-- <li><a href="{{ site.baseurl }}/lawyers">Lawyers and Law Firms</a></li> --></a>
                 <!-- <li><a href="{{ site.baseurl }}/law-students">Law students</a></li> -->
                 <!-- <li><a href="{{ site.baseurl }}/non-profits">NGOs and Not-for-profits</a></li> -->
