--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
               <ul class="dropdown-menu" role="menu">
                   <li><a href="{{site.baseurl}}/about/">About the WNYHRC</a></li>
                   <li><a href="{{site.baseurl}}/faculty-advisory-board">Faculty Advisory Board</a></li>
-                  <li><a href="{{site.baseurl}}/leadership/">Student Leadership</a></li>
+                  <li><a href="{{site.baseurl}}/student-directors/">Student Directors</a></li>
                   <li><a href="{{site.baseurl}}/evaluators">Volunteers</a></li>
               </ul>
             <li class="dropdown">
