add interpreters page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,7 @@
                 <!-- Not ready yet! <li><a href="{{ site.baseurl }}/donate"><strong>Donate!</strong></a></li> -->
                 <li><a href="{{ site.baseurl }}/clinicians">Clinicians</a></li>
                 <li><a href="{{ site.baseurl }}/medical-students">Medical students</a></li>
+                <li><a href="{{ site.baseurl }}/interpreters">Interpreters</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Resources <span class="caret"></span></a>
