--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,8 @@
                   <li><a href="{{site.baseurl}}/about/">About the WNYHRC</a></li>
                   <li><a href="{{site.baseurl}}/faculty-advisory-board">Faculty Advisory Board</a></li>
                   <li><a href="{{site.baseurl}}/student-directors/">Student Directors</a></li>
-                  <li><a href="{{site.baseurl}}/volunteers">Volunteers</a></li>
+                  <li><a href="{{site.baseurl}}/volunteers">Our Volunteers</a></li>
+                  <li><a href="{{site.baseurl}}/updates">News & Updates</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
@@ -47,7 +48,6 @@
                 <li><a href="http://www.rcusa.org/asylum-and-detention">Refugee Council USA: Asylum and Detention</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">International</li>
-                  <!-- Not ready yet! <li><a href="#"><strong>WNYHRC Blog</strong></a></li> --></a>
                   <li><a href="http://healtorture.org/">HealTorture.org</a></li>  
                   <li><a href="http://physiciansforhumanrights.org/">Physicians For Human Rights</a></li>
                   <li><a href="http://www.ohchr.org/en/hrbodies/hrc/pages/hrcindex.aspx">United Nations Human Rights Council</a></li>
