--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,6 @@
                   <li><a href="{{site.baseurl}}/faculty-advisory-board">Faculty Advisory Board</a></li>
                   <li><a href="{{site.baseurl}}/student-directors/">Student Directors</a></li>
                   <li><a href="{{site.baseurl}}/volunteers">Our Volunteers</a></li>
-                  <li><a href="{{site.baseurl}}/updates">News & Updates</a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Get involved <span class="caret"></span></a>
@@ -31,6 +30,7 @@
                 <li><a href="{{ site.baseurl }}/clinicians">Clinicians</a></li>
                 <li><a href="{{ site.baseurl }}/medical-students">Medical students</a></li>
                 <li><a href="{{ site.baseurl }}/interpreters">Interpreters</a></li>
+                <li><a href="{{site.baseurl}}/updates"><strong>News & Updates</strong></a></li>
               </ul>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Resources <span class="caret"></span></a>
