added EthnoMed to resources list

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,6 +52,7 @@
                   <li><a href="http://physiciansforhumanrights.org/">Physicians For Human Rights</a></li>
                   <li><a href="http://www.ohchr.org/en/hrbodies/hrc/pages/hrcindex.aspx">United Nations Human Rights Council</a></li>
                   <li><a href="h​ttp://www.unhcr.org">United Nations High Commission on Refugees</a></li>
+                  <li><a href="https://ethnomed.org/culture">EthnoMed Cultural Profiles</a></li>
               </ul>
             </li>
             <li><a style="margin-top:10px" href="{{ site.baseurl }}/evaluation"><strong>Request an Evaluation</strong></a></li>
