--- a/_includes/splash.html
+++ b/_includes/splash.html
@@ -1,2 +1,5 @@
 <p style="text-align: center;">
 We are a team of <a href="/faculty-advisory-board/">physicians</a> and <a href="/student-directors/">medical students</a> from the <a href="https://medicine.buffalo.edu/">University at Buffalo Jacobs School of Medicine and Biomedical Sciences</a> dedicated to providing <a href="/about/">medical and psychological forensic evaluations</a> for survivors of torture and political violence who are seeking asylum in the United States.</p>
+
+<br>
+<center><button type="button" class="btn btn-lg btn-primary"><a href="/updates" style="color:white !important;"><b>See our latest news...</a></button></center>
